[SIDP-513] - idpui taglib could look for more languages matches
[SIDP-514] - Alt text for IdP Logos is not esapiEncoder.encodeForHTMLAttribute
[SIDP-520] - Ipad/iOS devices will auto capitalize text entered into the IdP login screen, which can cause errors. Adding an HTML element will prevent that
[SIDP-522] - supplied examples shouldn't promote federation URIs as relying parties

Changes in Release 2.3.3
=============================================
[SIDP-504] - Alt text generate for logo has mismatched quoting

Changes in Release 2.3.2
=============================================
[SIDP-500] - shibboleth-identityprovider-2.3.1 installer broken on Windows 7 (64-bit) and Windows XP
 - Update version of Shib Common library

Changes in Release 2.3.1
=============================================
[SIDP-490] - REMOTE_USER handler not detecting empty value
[SIDP-491] - Stylesheet link in login.jsp is not inside the head tag
[SIDP-492] - bin/version causes exception
[SIDP-494] - login.config sample needs updating
[SIDP-497] - Queries should return the same NameID supplied by the caller

Changes in Release 2.3.0
=============================================
[SIDP-272] - Regenerate self-signed certificate with installer task
[SIDP-404] - Add an install-time setting for the path to web.xml
[SIDP-429] - Limit metadata SP credential resolution for encryption to RSA keys only
[SIDP-442] - Add JSESSIONID and ClientIP to MDC
[SIDP-448] - Create a login handler that provides authn "state" data to an external authentication 
             system and has that system authenticate the user.
[SIDP-461] - Add legacy Shib SSO protocol as binding for IdP-initiated SSO for SAML 2.0
[SIDP-464] - An SPNameQualifier in NameIDPolicy always treated as an affiliation
[SIDP-468] - Add taglib to simplify rendering login pages.
[SIDP-469] - eduPersonTargetedID Could Be Separately Commented
[SIDP-471] - Taglibs appear to be caching SP information